// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineUser renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User @some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "display": "flex",
        },
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
  testID="InlineUser"
>
  <View
    style={
      [
        [
          {
            "marginRight": 7,
          },
        ],
      ]
    }
  >
    <mockUserIcon
      testID="mockUserIcon"
    />
  </View>
  <Text
    maxFontSizeMultiplier={2}
    selectable={true}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
          ],
        ],
      ]
    }
  >
    @some_login
  </Text>
</View>
`;

exports[`InlineUser when offline renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User @some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "display": "flex",
        },
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
  testID="InlineUser"
>
  <View
    style={
      [
        [
          {
            "marginRight": 7,
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#454545",
            "fontSize": 22,
          },
          undefined,
          {
            "fontFamily": "INatIcon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="InlineUser.FallbackPicture"
    >
      
    </Text>
  </View>
  <Text
    maxFontSizeMultiplier={2}
    selectable={true}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
          ],
        ],
      ]
    }
  >
    @some_login
  </Text>
</View>
`;

exports[`InlineUser when user has no icon set renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User @some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "display": "flex",
        },
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
      ],
    ]
  }
  testID="InlineUser"
>
  <View
    style={
      [
        [
          {
            "marginRight": 7,
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#454545",
            "fontSize": 22,
          },
          undefined,
          {
            "fontFamily": "INatIcon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="InlineUser.FallbackPicture"
    >
      
    </Text>
  </View>
  <Text
    maxFontSizeMultiplier={2}
    selectable={true}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Medium",
            },
          ],
        ],
      ]
    }
  >
    @some_login
  </Text>
</View>
`;
